2024.09.20 - 서버에 톰캣 적용방법 작성 - 도커 이미지 삭제 명령어 추가